crates/pgls_pretty_print/tests/snapshots/multi/tests__20220117141357_extensions_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20220117141357_extensions.sql
---
create extension if not exists pg_stat_statements with schema extensions;

create extension if not exists pg_trgm with schema extensions;

create extension if not exists citext with schema extensions;

create extension if not exists pg_cron;
