crates/pgls_pretty_print/tests/snapshots/multi/tests__20220117141507_semver_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20220117141507_semver.sql
---
create type app.semver_struct as (
  major smallint,
  minor smallint,
  patch smallint
);

create or replace function app.is_valid(app.semver_struct)
returns boolean
language sql
immutable
as $function$
select (
        ($1).major is not null
        and ($1).minor is not null
        and ($1).patch is not null
    )
$function$;

create domain app.semver as app.semver_struct check (app.is_valid(value));

create function app.semver_exception(version text)
returns app.semver_struct
language plpgsql
immutable
as $function$
begin
    raise exception using errcode='22000', message=format('Invalid semver %L', version);
end;
$function$;

create function app.text_to_semver(text)
returns app.semver_struct
language sql
immutable
strict
as $function$
with s(version) as (
        select (
            split_part($1, '.', 1),
            split_part($1, '.', 2),
            split_part(split_part(split_part($1, '.', 3), '-', 1), '+', 1)
        )::app.semver_struct
    )
    select
        case app.is_valid(s.version)
            when true then s.version
            else app.semver_exception($1)
       end
    from
        s
$function$;

create or replace function app.semver_to_text(app.semver)
returns text
language sql
immutable
as $function$
select
        format('%s.%s.%s', $1.major, $1.minor, $1.patch)
$function$;
